# percentile-grids

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  gamlss_model_BCPE.rds  launcher.py  percentiles_table_BCPE.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
gamlss/r_gamlss_package/: gamlss_r.py  gamlss_r_dev.py
grids/: main.py  reference_dataset.db  streamlit_app.py
grids/data_mock/: 01_create_mock_data.py  original_mock.csv
grids/data_mock/artifical_reference_dataset/: Alice_Brown_629169.csv  Alice_Brown_655828.csv  Alice_Johnson_129327.csv  Alice_Smith_206574.csv  Alice_Smith_277257.csv  Alice_Smith_373250.csv  Alice_Smith_526864.csv  Alice_Smith_930205.csv  Alice_Williams_833218.csv  Bob_Doe_233076.csv  Bob_Doe_677444.csv  Bob_Johnson_239488.csv  Bob_Smith_190288.csv  Bob_Smith_206606.csv  (+39 more)
grids/data_processing/: db_utils.py  process_input.py
grids/db/: db_utils.py  process_input.py
grids/engine/: calculate.py  data_cache.py  deprecated_calculate.py  environment.py  model.py  selector.py  visualization.py
grids/gamlss/: gamlss.py  r_singleton.py
grids/resources/: model_candidates.py
grids/utils/: data_cache.py
grids/web_interface/: main_page.py  percentile_grids_page.py  reference_dataset_page.py  streamlit_app.py
scripts/: create_mock_data.py
src/grids/: streamlit_app.py
tests/: README.md  __init__.py  conftest.py  sample_input_test.xlsx  test_brain_structures.py  test_data_cache.py  test_data_processing.py  test_model_engine.py  test_runner.py  test_web_interface.py
(+66 files in other folders)
